<resources>
    <string name="app_name">Simple Notes</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="all_delete">Delete</string>
    <string name="all_cancel">Cancel</string>
    <string name="delete_task_confirm">Confirm note(s) deletion?</string>
    <string name="move_task_archive">Archive selected note?</string>
    <string name="move_tasks_archive">Archive selected notes?</string>
    <string name="all_move_to_trash">Move to trash</string>
    <string name="trash_title">Trash</string>
    <string name="all_staggered">Staggered</string>
    <string name="vertical">Vertical</string>
    <string name="add_note">Add note</string>
    <string name="total_notes">Total notes (%1$s)</string>

    <string name="home_shared_item_container">task_animation_container%1$s</string>
    <string name="home_shared_detail_container">task_animation_detail_container</string>
    <string name="selected">Selected</string>
    <string name="archive">Archive</string>
    <string name="edit_note">Edit note</string>
    <string name="delete_task_permanently">Delete note permanently?</string>
    <string name="delete_tasks_permanently">Delete notes permanently?</string>
    <string name="all_unarchive">Unarchive</string>
    <string name="note_copied">Copied</string>
    <string name="all_copy">Copy</string>
    <string name="all_share">Share</string>
    <string name="archived">Archived</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="settings">Settings</string>
    <string name="categories">Labels</string>

    <string name="delete_category">Delete label?</string>
    <string name="delete_categories">Delete labels?</string>
    <string name="category">Label</string>
    <string name="edit_categories">Edit labels</string>
    <string name="add_categories">Add labels</string>
    <string name="add_category">Add label</string>
    <string name="categories_dot">"Labels: "</string>
    <string name="filter_by_category">Filter by labels</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_about">About</string>
    <string name="settings_source_licenses">Source license</string>
    <string name="settings_review">Review App</string>
    <string name="all_ok">OK</string>
    <string name="settings_choose_theme">Choose theme</string>

    <string name="about_developer">If you want to contact developer to provide feedback or any suggestion, please use this email <a href="mailto:franbrillembourg.dev@gmail.com?subject=Feedback Simple Notes App"> franbrillembourg.dev@gmail.com</a></string>
    <string name="about_copyright">©2023 Francisco Brillembourg</string>
    <string name="about_title">About</string>
    <string name="about_version">Version</string>
    <string name="about">About</string>
    <string name="licences">Licenses</string>
    <string name="wizard_text">Write your first note!</string>
    <string name="label_empty_text">Write your first note in this label!</string>
    <string name="search_no_notes_found">No notes found</string>
    <string name="labels_empty_text">No notes found in these labels</string>
    <string name="trash_empty">No archived notes yet</string>
    <string name="categories_wizard">Labels are used to categorize your notes so you can filter your homepage</string>
    <string name="all_search">Search</string>
    <string name="search_note">Search note</string>
    <string name="last_edited">Edited: %s</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_system">Follow system</string>
</resources>