<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_top_level_destinations"
        android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/notes" />

        <item
            android:id="@+id/categoriesFragment"
            android:icon="@drawable/ic_outline_label_on_secondary_container_24"
            android:title="@string/edit_categories" />

        <item
            android:id="@+id/trashFragment"
            android:icon="@drawable/ic_outline_archive_on_surface_24"
            android:title="@string/archived" />

    </group>

    <group
        android:id="@+id/menu_group_options"
        android:checkableBehavior="none">

        <item
            android:id="@+id/menu_backup"
            android:title="@string/backup"
            android:icon="@drawable/ic_outline_cloud_upload_24" />

        <item
            android:id="@+id/menu_restore"
            android:title="@string/restore"
            android:icon="@drawable/ic_outline_cloud_download_24" />

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/settings" />
    </group>

</menu>