<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_note_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/all_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_note_copy"
        android:icon="@drawable/ic_round_content_copy_24"
        android:title="@string/all_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_note_unachive"
        android:icon="@drawable/ic_outline_unarchive_24"
        android:title="@string/all_unarchive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_note_archive"
        android:icon="@drawable/ic_outline_archive_on_secondary_24"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_note_delete"
        android:icon="@drawable/ic_baseline_delete_on_secondary_24"
        android:title="@string/all_delete"
        app:showAsAction="ifRoom" />


</menu>