<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="30dp"
    android:paddingStart="30dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37">

        <TextView
            android:id="@+id/about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="?colorOnSurface"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_text_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?colorOnSurface"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_app_name"
            tools:text="Version 1.0.0" />

        <ImageView
            android:id="@+id/about_image_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_text_version" />

        <!--        <TextView-->
        <!--            android:id="@+id/about_text_certified"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:gravity="center"-->
        <!--            android:textSize="12sp"-->
        <!--            android:textColor="?colorOnSurfaceVariant"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:text="@string/about_provider_data"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/about_image_logo" />-->


        <TextView
            android:id="@+id/about_text_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/about_copyright"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="?colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_image_logo" />

        <TextView
            android:id="@+id/about_text_todeveloper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:textColor="?colorOnSurface"
            android:text="@string/about_developer"
            app:layout_constraintEnd_toEndOf="@+id/about_text_author"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="@+id/about_text_author"
            app:layout_constraintTop_toBottomOf="@+id/about_text_author" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>