<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="brillembourg.notes.simple.presentation.detail.DetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorSurface"
            android:orientation="vertical"
            tools:context=".presentation.detail.DetailFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="12dp">

                <!--                <com.google.android.material.card.MaterialCardView-->
                <!--                    android:id="@+id/category_cardview"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toTopOf="parent"-->
                <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
                <!--                    android:checkable="true"-->
                <!--                    app:cardCornerRadius="20dp"-->
                <!--                    app:contentPadding="2dp"-->
                <!--                    style="@style/Widget.Material3.CardView.Outlined"-->
                <!--                    app:cardElevation="0dp"-->
                <!--                    app:cardUseCompatPadding="true"-->
                <!--                    app:checkedIcon="@null"-->
                <!--                    app:cardForegroundColor="@drawable/selector_cardview_foreground_color"-->
                <!--                    app:rippleColor="?colorPrimaryContainer"-->
                <!--                    app:strokeColor="@drawable/selector_cardview_stroke_category_color">-->

                <!--                    <TextView-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:textSize="12sp"-->
                <!--                        android:paddingStart="16dp"-->
                <!--                        android:paddingEnd="16dp"-->
                <!--                        android:textColor="@color/secondaryTextColor"-->
                <!--                        android:text="Last edited: "/>-->

                <!--                </com.google.android.material.card.MaterialCardView>-->


                <LinearLayout
                    android:id="@+id/detail_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:transitionName="@{@string/home_shared_detail_container}">


                    <EditText
                        android:id="@+id/detail_edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/title"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:text="@={viewmodel.uiDetailUiState.component3().titleBinding}"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/detail_edit_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="@string/note"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:padding="4dp"
                        android:text="@={viewmodel.uiDetailUiState.component3().contentBinding}"
                        android:textSize="16sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/detail_recycler_categories"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/item_category_chip_color_secondary" />

                    <TextView
                        android:id="@+id/detail_text_last_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:textSize="12sp"
                        android:paddingStart="8dp"
                        android:paddingEnd="16dp"
                        android:textColor="?colorOnSurfaceVariant"
                        android:text="@string/last_edited" />

                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
